organize the layout

--- a/project-galactico/homemenu.html
+++ b/project-galactico/homemenu.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1></h1>
+        <h1>FC GALÁCTICOS</h1>
         <img src="" alt="Fc Galacticos">
         <nav>
             <ul>
