--- a/project-galactico/about.html
+++ b/project-galactico/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>History of Club</title>
+    <link rel="stylesheet" href="galacticostyle/aboutstyle.css">
 </head>
 <body>
     <header>
