--- a/project-galactico/homemenu.html
+++ b/project-galactico/homemenu.html
@@ -13,7 +13,7 @@
         <h1>FC GALÁCTICOS</h1>
         <nav>
             <ul>
-                <li><a href="#" target="_self" rel="next">Home</a></li>
+                <li id="active"><a href="#" target="_self" rel="next">Home</a></li>
                 <li><a href="galarry.html" target="_self" rel="next">Galarry</a></li>
                 <li><a href="members.html" target="_self" rel="next">Members</a></li>
                 <li><a href="about.html" target="_self" rel="next">About</a></li>
