--- a/project-galactico/about.html
+++ b/project-galactico/about.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>History of Club</title>
+    <title>About</title>
     <link rel="stylesheet" href="galacticostyle/aboutstyle.css">
+    <link rel="shortcut icon" href="/icon/galacticoa.ico" type="image/x-icon">
 </head>
 <body>
     <header>
