--- a/project-galactico/about.html
+++ b/project-galactico/about.html
@@ -59,7 +59,7 @@
         
         <p>Nós Fc Galácticos temos como lema a família em primeiro lugar.</p>
 </article>
-    <p id="back"><a href="homemenu.html" target="_self" rel="prev"><img src="../image/back.png" alt="back to main page"></a></p>
+    <p id="back"><a href="homemenu.html" target="_self" rel="prev"><img src="../image/back.png" alt="back to home page"></a></p>
     </main>
     
 </body>
