--- a/project-galactico/members.html
+++ b/project-galactico/members.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Members Of Club</title>
     <link rel="stylesheet" href="galacticostyle/membersstyle.css">
+    <link rel="shortcut icon" href="../icon/galacticoa.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -19,9 +20,9 @@
                 <caption>TABELA NOMINAL DOS JOGADORES ACTUAIS </caption>
                 <thead>
                     <tr>
-                        <th>Nome dos Jogadores</th>
-                        <th>Posições</th>
-                        <th class="position">Número da Camisola</th>
+                        <th scope="col">Nome dos Jogadores</th>
+                        <th scope="col">Posições</th>
+                        <th scope="col" class="position">Número da Camisola</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -163,14 +164,14 @@
                 <tfoot>
                     <thead>
                         <tr>
-                            <th>Coach</th>
-                            <th>Total de Jogadores</th>
+                            <th scope="col">Coach</th>
+                            <th colspan="2" scope="col">Total de Jogadores</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>ABC</td>
-                            <td>26</td>
+                            <td colspan="2">26</td>
                         </tr>
                     </tbody>
                 </tfoot>
