--- a/project-galactico/members.html
+++ b/project-galactico/members.html
@@ -98,7 +98,7 @@
                         <td class="number">70</td>
                     </tr>
                     <tr>
-                        <td>Sanadrea</td>
+                        <td>San Adrea</td>
                         <td class="position">Médio Ofensivo</td>
                         <td class="number">80</td>
                     </tr>
