--- a/project-galactico/galarry.html
+++ b/project-galactico/galarry.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foto Galarry</title>
+    <link rel="stylesheet" href="galacticostyle/galarrystyle.css">
     
 </head>
 <body>
@@ -12,9 +13,8 @@
         <h1>Welcome to our foto galarry</h1>
     </header>
     <main>
-        <nav>
-        <a href="homemenu.html" target="_self" rel="prev"> Go back to Home page</a>
-        </nav>
+        <p id="back-img"><a href="homemenu.html" target="_self" rel="prev"> <img src="../image/back.png" alt="back to home page"></img></a></p>
     </main>
+    
 </body>
 </html>
