--- a/project-galactico/galarry.html
+++ b/project-galactico/galarry.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foto Galarry</title>
     <link rel="stylesheet" href="galacticostyle/galarrystyle.css">
+    <link rel="shortcut icon" href="../icon/galacticoa.ico" type="image/x-icon">
     
 </head>
 <body>
