--- a/project-galactico/homemenu.html
+++ b/project-galactico/homemenu.html
@@ -11,14 +11,18 @@
 <body>
     <header>
         <h1>FC GALÁCTICOS</h1>
-        <nav>
-            <ul>
-                <li id="active"><a href="#" target="_self" rel="next">Home</a></li>
-                <li><a href="galarry.html" target="_self" rel="next">Galarry</a></li>
-                <li><a href="members.html" target="_self" rel="next">Members</a></li>
-                <li><a href="about.html" target="_self" rel="next">About</a></li>
-            </ul>
-        </nav>
+        <section id="dropdown">
+            <button id="dropdownbtn">Menu</button>
+            <nav id="dropdown-content">
+            
+                <ul>
+                    <li id="active"><a href="#" target="_self" rel="next">Home</a></li>
+                    <li><a href="galarry.html" target="_self" rel="next">Galarry</a></li>
+                    <li><a href="members.html" target="_self" rel="next">Members</a></li>
+                    <li><a href="about.html" target="_self" rel="next">About</a></li>
+                </ul>
+            </nav>
+        </section>
     </header>
     
         <main>
