update my style

--- a/project-galactico/homemenu.html
+++ b/project-galactico/homemenu.html
@@ -12,7 +12,7 @@
     <header>
         <h1>FC GALÁCTICOS</h1>
         <section id="dropdown">
-            <button id="dropdownbtn">Menu</button>
+            <button id="dropdown-btn">Menu</button>
             <nav id="dropdown-content">
             
                 <ul>
