upadate my project

--- a/project-galactico/homemenu.html
+++ b/project-galactico/homemenu.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>FC GALÁCTICOS</h1>
+        <h1>Fc Galácticos</h1>
         <section id="dropdown">
             <button id="dropdown-btn">Menu</button>
             <nav id="dropdown-content">
