--- a/project-galactico/members.html
+++ b/project-galactico/members.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>MEMBERS OF FC GALÁCTICOS</h1>
+        <h1>Members Team</h1>
     </header>
 
     <main>
@@ -27,10 +27,15 @@
                 </thead>
                 <tbody>
                     <tr>
+                        <td class="name">Piranha</td>
+                        <td class="position" rowspan="2">Balizeiro</td>
+                        <td class="number">0</td>
+                    </tr>
+                    <tr>
                         <td class="name">Esmael</td>
-                        <td class="position">Balizeiro</td>
                         <td class="number">1</td>
                     </tr>
+                    <tr></tr>
                     <tr>
                         <td class="name">Capitão 500</td>
                         <td rowspan="6" class="position">Central</td>
@@ -142,18 +147,18 @@
                     </tr>
                 </tbody>
                 <tfoot>
-                    <thead>
                         <tr>
                             <th scope="col">Coach</th>
                             <th colspan="2" scope="col">Total de Jogadores</th>
                         </tr>
-                    </thead>
-                    <tbody>
                         <tr>
                             <td>ABC</td>
-                            <td id="total" colspan="2">26</td>
+                            <td id="total" rowspan="3" colspan="3">26</td>
                         </tr>
-                    </tbody>
+                        <tr>
+                            <td>Degas</td>
+                        </tr>
+                    
                 </tfoot>
             </table>
         </section>
