--- a/project-galactico/about.html
+++ b/project-galactico/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>History of Fc Galácticos</h1>
+        <h1>History of Fc Team</h1>
     </header>
     <main>
     
