--- a/project-galactico/about.html
+++ b/project-galactico/about.html
@@ -40,7 +40,7 @@
 </section>
 
 <article class="paragraphy">
-        <p>Em 04-04-2018 foi assim que decidimos fundar uma família mas que uma equipa <strong>Fc Galácticos</strong>; houve muita indecisão para escolhermos o nome oficial desta família, entre os fundadores alguns queriam que pudesse chamar <strong>Fc Travessa</strong> devido ao motivo que levou-nos a sair da equipa que antes faziam parte <q>Fc São Marcos</q>, porque tinhamos reunido os melhores jogadores da nossa travessa afim de participamos em um Quadrangular que foi realizado na <q>Rua da Avó Débora</q>.</p><br>
+        <p>Em 04-04-2018 foi assim que decidimos fundar uma família mas que uma equipa <strong>Fc Galácticos</strong>; houve muita indecisão para escolhermos o nome oficial desta família, entre os fundadores alguns queriam que pudesse chamar <strong>Fc Travessa</strong> devido ao motivo que levou-nos a sair da equipa que antes faziam parte <q>Fc São Marcos</q>, porque tinhamos reunido os melhores jogadores da nossa travessa afim de participamos em um Quadrangular que foi realizado na <q><strong>Rua da Avó Débora</strong></q>.</p><br>
         
         <p>Mas com tudo o menino <strong>Ney</strong> fez-nos decipar a dúvida sobre o nome do club, ele disse-nos vistos que ganhamos este pequeno quadrangular saimos a melhor equipa e temos qualidade no plantel; porque não atribuimos o nome <strong>FC GALÁCTICOS</strong>!</p><br>
         
