update my all page

--- a/project-galactico/galarry.html
+++ b/project-galactico/galarry.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foto Galarry</title>
     <link rel="stylesheet" href="galacticostyle/galarrystyle.css">
-    <link rel="shortcut icon" href="../icon/galacticoa.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../icon/galactico.ico" type="image/x-icon">
     
 </head>
 <body>
@@ -14,7 +14,7 @@
         <h1>Welcome to our foto galarry</h1>
     </header>
     <main>
-        <p id="back-img"><a href="homemenu.html" target="_self" rel="prev"> <img src="../image/back.png" alt="back to home page"></img></a></p>
+        <p id="back-img"><a href="homemenu.html" target="_self" rel="prev"><input type="image" src="/image/back.png" alt="Photo-Back"></img></a></p>
     </main>
     
 </body>
