--- a/project-galactico/members.html
+++ b/project-galactico/members.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Members Of Club</title>
+    <title>Members Team</title>
     <link rel="stylesheet" href="galacticostyle/membersstyle.css">
-    <link rel="shortcut icon" href="../icon/galacticoa.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../icon/galactico.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -162,7 +162,7 @@
                 </tfoot>
             </table>
         </section>
-        <p id="back"><a href="homemenu.html" target="_self" rel="prev"><img src="../image/back.png" alt="back to home page"></a></p>
+        <p id="back"><a href="homemenu.html" target="_self" rel="prev"><input type="image" src="/image/back.png" alt="Photo-Back"></a></p>
 
     </main>
     <footer><p>  <a href="https://github.com/santosraimundo" target="_blank" rel="external"> &copy; Created by Santos Raimundo</a></p></footer>
