--- a/project-galactico/homemenu.html
+++ b/project-galactico/homemenu.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FC Galáticos</title>
     <link rel="stylesheet" href="galacticostyle/style.css">
-    <link rel="shortcut icon" href="/icon/galacticoa.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/icon/galactico.ico" type="image/x-icon">
 </head>
 <body>
     <header>
+        <img src="/image/galactico.png" alt="Photo-Galacticos">
         <h1>Fc Galácticos</h1>
+        
         <section id="dropdown">
             <button id="dropdown-btn">Menu</button>
             <nav id="dropdown-content">
