update my project galactico

--- a/project-galactico/homemenu.html
+++ b/project-galactico/homemenu.html
@@ -5,15 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FC Galácticos</title>
-    <link rel="stylesheet" href="menu/mobilefirst.css">
-    <link rel="stylesheet" href="menu/landcaspe.css" media="screen and (orientation:landscape)">
-    <link rel="stylesheet" href="menu/tablet.css" media=" only screen and (min-width:768px)">
-    <link rel="stylesheet" href="menu/desktop.css" media="only screen and (min-width:992px)">
-    <link rel="stylesheet" href="menu/tv.css" media="only screen and (min-width:1200px)">
+    <link rel="stylesheet" href="menu/small-devices.css">
+    <link rel="stylesheet" href="menu/medium-large-devices.css" media="screen and (min-width: 768px)">
     <link rel="shortcut icon" href="/icon/galactico.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body onresize="changeSize()">
     <header>
         <img src="/image/galactico.png" alt="Photo-Galacticos">
         <h1>Fc Galácticos</h1>
@@ -39,6 +36,14 @@
             
         </main>
         <script>
+            function changeSize(){
+                if(window.innerWidth >= 768){
+                    menumobile.style.display ="block";
+                }else{
+                    menumobile.style.display = "none";
+                }
+                
+            }
             function clickMenu(){
                 if(menumobile.style.display == 'block'){
                     menumobile.style.display = 'none';
