--- a/project-galactico/homemenu.html
+++ b/project-galactico/homemenu.html
@@ -7,7 +7,7 @@
     <title>FC Galácticos</title>
     <link rel="stylesheet" href="menu/small-devices.css">
     <link rel="stylesheet" href="menu/medium-large-devices.css" media="screen and (min-width: 768px)">
-    <link rel="shortcut icon" href="/icon/galactico.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/image/galactico.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body onresize="changeSize()">
