--- a/project-galactico/homemenu.html
+++ b/project-galactico/homemenu.html
@@ -7,12 +7,12 @@
     <title>FC Galácticos</title>
     <link rel="stylesheet" href="menu/small-devices.css">
     <link rel="stylesheet" href="menu/medium-large-devices.css" media="screen and (min-width: 768px)">
-    <link rel="shortcut icon" href="/image/galactico.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../image/galactico.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body onresize="changeSize()">
     <header>
-        <img src="/image/galactico.png" alt="Photo-Galacticos">
+        <img src="../image/galactico.png" alt="Photo-Galacticos">
         <h1>Fc Galácticos</h1>
         
         <section id="dropdown">
