update my style

--- a/project-galactico/galarry.html
+++ b/project-galactico/galarry.html
@@ -14,7 +14,7 @@
         <h1>Welcome to our foto galarry</h1>
     </header>
     <main>
-        <p id="back-img"><a href="homemenu.html" target="_self" rel="prev"><input type="image" src="/image/back.png" alt="Photo-Back"></img></a></p>
+        <p id="back-img"><a href="homemenu.html" target="_self" rel="prev"><input type="image" src="../image/back.png" alt="Photo-Back"></img></a></p>
     </main>
     
 </body>
