--- a/project-galactico/members.html
+++ b/project-galactico/members.html
@@ -162,7 +162,7 @@
                 </tfoot>
             </table>
         </section>
-        <p id="back"><a href="homemenu.html" target="_self" rel="prev"><input type="image" src="/image/back.png" alt="Photo-Back"></a></p>
+        <p id="back"><a href="homemenu.html" target="_self" rel="prev"><input type="image" src="../image/back.png" alt="Photo-Back"></a></p>
 
     </main>
     <footer><p>  <a href="https://github.com/santosraimundo" target="_blank" rel="external"> &copy; Created by Santos Raimundo</a></p></footer>
