--- a/project-galactico/homemenu.html
+++ b/project-galactico/homemenu.html
@@ -12,7 +12,7 @@
 </head>
 <body onresize="changeSize()">
     <header>
-        <img src="../image/galactico.png" alt="Photo-Galacticos">
+        <img src="./image/galactico.png" alt="Photo-Galacticos">
         <h1>Fc Galácticos</h1>
         
         <section id="dropdown">
