--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Team</title>
     <link rel="stylesheet" href="galacticostyle/aboutstyle.css">
-    <link rel="shortcut icon" href="../icon/galactico.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="image/galactico.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -59,7 +59,7 @@
         
         <p>Nunca tiramos os nossos olhar ao objectivo que o club tem, por isto consideramos que os obstáculos são etapas ao nosso trajeto.</p>
 </article>
-    <p id="back"><a href="homemenu.html" target="_self" rel="prev"><input type="image" src="../image/back.png" alt="Photo-Back"></a></p>
+    <p id="back"><a href="homemenu.html" target="_self" rel="prev"><input type="image" src="image/back.png" alt="Photo-Back"></a></p>
     </main>
     <footer><p>  <a href="https://github.com/santosraimundo" target="_blank" rel="external"> &copy; Created by Santos Raimundo</a></p></footer>
     
