--- a/homemenu.html
+++ b/homemenu.html
@@ -12,7 +12,7 @@
 </head>
 <body onresize="changeSize()">
     <header>
-        <img src="../image/galactico.png" alt="Photo-Galácticos">
+        <img src="image/galactico.png" alt="Photo-Galácticos">
         <h1>Fc Galácticos</h1>
         
         <section id="dropdown">
