add style in site

--- a/homemenu.html
+++ b/homemenu.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FC Galácticos</title>
     <link rel="stylesheet" href="menu/small-devices.css">
-    <link rel="stylesheet" href="menu/medium-large-devices.css" media="screen and (min-width:768px)">
+    <link rel="stylesheet" href="menu/medium-large-devices.css">
     <link rel="shortcut icon" href="image/galactico.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
