new version of my site

--- a/members.html
+++ b/members.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Members Team</title>
-    <link rel="stylesheet" href="galacticostyle/membersstyle.css">
+    <link rel="stylesheet" href="member/small-devices.css">
+    <link rel="stylesheet" href="member/medium-large-devices.css">
+    <link rel="stylesheet" href="member/print.css" media="print">
     <link rel="shortcut icon" href="image/galactico.png" type="image/x-icon">
 </head>
 <body>
