--- a/galarry.html
+++ b/galarry.html
@@ -14,6 +14,8 @@
         <h1>Welcome to our foto galarry</h1>
     </header>
     <main>
+        <h2>Falta colocar fotos do club esta para breve</h2>
+
         <p id="back-img"><a href="homemenu.html" target="_self" rel="prev"><input type="image" src="image/back.png" alt="Photo-Back"></img></a></p>
     </main>
     
