--- a/members.html
+++ b/members.html
@@ -65,7 +65,7 @@
                     </tr>
                     <tr>
                         <td class="name">Camavinga</td>
-                        <td rowspan="3" class="position">Médio Defensivo</td>
+                        <td rowspan="4" class="position">Médio Defensivo</td>
                         <td class="number">3</td>
                     </tr>
                     <tr>
@@ -77,6 +77,10 @@
                         <td class="number">14</td>
                     </tr>
                     <tr>
+                        <td class="name">Luguinha</td>
+                        <td class="number">20</td>
+                    </tr>
+                    <tr>
                         <td class="name">Safado</td>
                         <td rowspan="5"class="position">Médio Ofensivo</td>
                         <td class="number">6</td>
@@ -85,6 +89,7 @@
                         <td class="name">Ney</td>
                         <td class="number">8</td>
                     </tr>
+                    
                     <tr>
                         <td class="name">Kwanza</td>
                         <td class="number">30</td>
@@ -95,7 +100,7 @@
                         <td class="number">70</td>
                     </tr>
                     <tr>
-                        <td>San Adrea</td>
+                        <td class="name">San Adrea</td>
                         <td class="number">80</td>
                     </tr>
                     
