--- a/galarry.html
+++ b/galarry.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foto Galarry</title>
-    <link rel="stylesheet" href="galacticostyle/galarrystyle.css">
+    <link rel="stylesheet" href="gallary/galarrystyle.css">
     <link rel="shortcut icon" href="image/galactico.png" type="image/x-icon">
     
 </head>
@@ -14,7 +14,29 @@
         <h1>Welcome to our foto galarry</h1>
     </header>
     <main>
-        <h2>Falta colocar fotos do club esta para breve!</h2>
+       <section id="galarry">
+        <div class="photos">
+            <a href="image-gallary/gallary-one.png"><img src="image-gallary/gallary-one.png" alt="Photo-Galacticos" width="400" height="300"></a>
+            <p>Retrato da final do campeonato Gira Kapolo do dia 17.12.2022</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-six.png"><img src="image-gallary/gallary-six.png" alt="Photo-Galacticos" width="400" height="300"></a>
+            <p>Retrato do primeiro jogo do campeonato Eu Amo Kapolo II do dia 04.06.2023</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-four.png"><img src="image-gallary/gallary-four.png" alt="Photo-Galacticos" width="400" height="300"></a>
+            <p>Retrato da celebração do quarto aniversário do club dia 04.04.2022</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-three.png"><img src="image-gallary/gallary-three.png" alt="Photo-Galacticos" width="400" height="300"></a>
+            <p>Retrato do jogo amistoso com uma vitória, Coroa, Djiby, Ney, Mata Puta e o Jorra do dia 27.11.2021</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-two.png"><img src="image-gallary/gallary-two.png" alt="Photo-Galacticos" width="400" height="300"></a>
+            <p>Retrato do jogo amistoso com uma vitória tudo pela estreia do equipamento, com os meninos de ouro Diva, Da Fanta, Dos Branco, Jordão e o Chicha do dia 09.04.2023</p>
+
+        </div>
+       </section>
 
         <p id="back-img"><a href="homemenu.html" target="_self" rel="prev"><input type="image" src="image/back.png" alt="Photo-Back"></img></a></p>
     </main>
