--- a/galarry.html
+++ b/galarry.html
@@ -16,25 +16,37 @@
     <main>
        <section id="galarry">
         <div class="photos">
-            <a href="image-gallary/gallary-one.png"><img src="image-gallary/gallary-one.png" alt="Photo-Galacticos" width="400" height="300"></a>
-            <p>Retrato da final do campeonato Gira Kapolo do dia 17.12.2022</p>
+            <a href="image-gallary/gallary-one.png"><img src="image-gallary/gallary-one.png" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Retrato da final do campeonato Gira Kapolo do dia 17.12.2022</p>
         </div>
         <div class="photos">
-            <a href="image-gallary/gallary-six.png"><img src="image-gallary/gallary-six.png" alt="Photo-Galacticos" width="400" height="300"></a>
-            <p>Retrato do primeiro jogo do campeonato Eu Amo Kapolo II do dia 04.06.2023</p>
+            <a href="image-gallary/gallary-six.png"><img src="image-gallary/gallary-six.png" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Retrato do primeiro jogo do campeonato Eu Amo Kapolo II do dia 04.06.2023</p>
         </div>
         <div class="photos">
-            <a href="image-gallary/gallary-four.png"><img src="image-gallary/gallary-four.png" alt="Photo-Galacticos" width="400" height="300"></a>
-            <p>Retrato da celebração do quarto aniversário do club dia 04.04.2022</p>
+            <a href="image-gallary/gallary-four.png"><img src="image-gallary/gallary-four.png" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Retrato da celebração do quarto aniversário do club dia 04.04.2022</p>
         </div>
         <div class="photos">
-            <a href="image-gallary/gallary-three.png"><img src="image-gallary/gallary-three.png" alt="Photo-Galacticos" width="400" height="300"></a>
-            <p>Retrato do jogo amistoso com uma vitória, Coroa, Djiby, Ney, Mata Puta e o Jorra do dia 27.11.2021</p>
+            <a href="image-gallary/gallary-three.png"><img src="image-gallary/gallary-three.png" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Retrato do jogo amistoso com uma vitória, Coroa, Djiby, Ney, Mata Puta e o Jorra do dia 27.11.2021</p>
         </div>
         <div class="photos">
-            <a href="image-gallary/gallary-two.png"><img src="image-gallary/gallary-two.png" alt="Photo-Galacticos" width="400" height="300"></a>
-            <p>Retrato do jogo amistoso com uma vitória tudo pela estreia do equipamento, com os meninos de ouro Diva, Da Fanta, Dos Branco, Jordão e o Chicha do dia 09.04.2023</p>
+            <a href="image-gallary/gallary-two.png"><img src="image-gallary/gallary-two.png" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Retrato do jogo amistoso com uma vitória tudo pela estreia do equipamento, com the golden boys de ouro Diva, Da Fanta, Dos Branco, Jordão e o Chicha do dia 09.04.2023</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-five.png"><img src="image-gallary/gallary-five.png" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Retrato do jogo amistoso com uma vitória Rangel foi a banda, com Safado, Mane-G, Seny, Paulo Soft, Ney e Djiby.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-seven.png"><img src="image-gallary/gallary-seven.png" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Retrato do jogo amistoso com uma vitória, o Kota Safado a passar experiência aos new school Capitã 500, Tonilson e Lisandro</p>
+        </div>
 
+        <div class="photos">
+            <a href="image-gallary/gallary-eigth.png"><img src="image-gallary/gallary-eigth.png" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Retrato do jogo amistoso com uma vitória, o Coroa fazer pasagem de testemunho aos new school Tonilson e Lisandro</p>
         </div>
        </section>
 
