update my galarry style

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="about/small-devices.css">
     <link rel="stylesheet" href="about/medium-large-devices.css">
     <link rel="shortcut icon" href="image/galactico.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <header>
@@ -60,7 +61,7 @@
         
         <p>Nunca tiramos os nossos olhar ao objectivo que o club tem, por isto consideramos que os obstáculos são etapas ao nosso trajeto.</p>
 </article>
-    <p id="back"><a href="homemenu.html" target="_self" rel="prev"><input type="image" src="image/back.png" alt="Photo-Back"></a></p>
+    <p id="back"><a href="homemenu.html" target="_self" rel="prev"><span class="material-symbols-outlined">arrow_back_ios_new</span></a></p>
     </main>
     <footer><p>  <a href="https://github.com/santosraimundo" target="_blank" rel="external"> &copy; Created by Santos Raimundo</a></p></footer>
     
