--- a/galarry.html
+++ b/galarry.html
@@ -20,23 +20,23 @@
        <section id="galarry">
         <div class="photos">
             <a href="image-gallary/gallary-one.png" target="blank" rel="next"><img src="image-gallary/gallary-one.png" alt="Photo-Galacticos" width="600" height="400"></a>
-            <p class="description">Retrato da final do campeonato <strong>Gira Kapolo</strong> do dia 17.12.2022</p>
+            <p class="description">Retrato da final do campeonato <strong>Gira Kapolo</strong> do dia 17.12.2022.</p>
         </div>
         <div class="photos">
             <a href="image-gallary/gallary-six.png" target="_blank" rel="next"><img src="image-gallary/gallary-six.png" alt="Photo-Galacticos" width="600" height="400"></a>
-            <p class="description">Retrato do primeiro jogo do campeonato <strong>Eu Amo Kapolo II</strong> do dia 04.06.2023</p>
+            <p class="description">Retrato do primeiro jogo do campeonato <strong>Eu Amo Kapolo II</strong> do dia 04.06.2023.</p>
         </div>
         <div class="photos">
             <a href="image-gallary/gallary-four.png" target="_blank" rel="next"><img src="image-gallary/gallary-four.png" alt="Photo-Galacticos" width="600" height="400"></a>
-            <p class="description">Retrato da celebração do <strong> 4º aniversário</strong> do club dia 04.04.2022</p>
+            <p class="description">Retrato da celebração do <strong> 4º aniversário</strong> do club dia 04.04.2022.</p>
         </div>
         <div class="photos">
             <a href="image-gallary/gallary-three.png" target="_blank" rel="next"><img src="image-gallary/gallary-three.png" alt="Photo-Galacticos" width="600" height="400"></a>
-            <p class="description">Retrato do jogo amistoso com uma vitória, <strong>Coroa, Djiby, Ney, Mata Puta e o Jorra</strong> do dia 27.11.2021</p>
+            <p class="description">Retrato do jogo amistoso com uma vitória, <strong>Coroa, Djiby, Ney, Mata Puta e o Jorra</strong> do dia 27.11.2021.</p>
         </div>
         <div class="photos">
             <a href="image-gallary/gallary-two.png" target="_blank" rel="next"><img src="image-gallary/gallary-two.png" alt="Photo-Galacticos" width="600" height="400"></a>
-            <p class="description">Retrato do jogo amistoso com uma vitória tudo pela estreia do equipamento, com the golden boys de ouro <strong>Diva, Da Fanta, Dos Branco, Jordão e o Chicha</strong> do dia 09.04.2023</p>
+            <p class="description">Retrato do jogo amistoso com uma vitória tudo pela estreia do equipamento, com the golden boys de ouro <strong>Diva, Da Fanta, Dos Branco, Jordão e o Chicha</strong> do dia 09.04.2023.</p>
         </div>
         <div class="photos">
             <a href="image-gallary/gallary-five.png" target="_blank" rel="next"><img src="image-gallary/gallary-five.png" alt="Photo-Galacticos" width="600" height="400"></a>
@@ -44,12 +44,12 @@
         </div>
         <div class="photos">
             <a href="image-gallary/gallary-seven.png" target="_blank" rel="next"><img src="image-gallary/gallary-seven.png" alt="Photo-Galacticos" width="600" height="400"></a>
-            <p class="description">Retrato do jogo amistoso com uma vitória, o Kota <strong>Safado</strong> a passar experiência aos new school <strong>Capitã 500, Tonilson e Lisandro</strong></p>
+            <p class="description">Retrato do jogo amistoso com uma vitória, o Kota <strong>Safado</strong> a passar experiência aos new school <strong>Capitã 500, Tonilson e Lisandro.</strong></p>
         </div>
 
         <div class="photos">
             <a href="image-gallary/gallary-eigth.png" target="_blank" rel="next"><img src="image-gallary/gallary-eigth.png" alt="Photo-Galacticos" width="600" height="400"></a>
-            <p class="description">Retrato do jogo amistoso com uma vitória, o <strong>Coroa</strong> fazer pasagem de testemunho aos new school <strong>Tonilson e Lisandro</strong></p>
+            <p class="description">Retrato do jogo amistoso com uma vitória, o <strong>Coroa</strong> fazer pasagem de testemunho aos new school <strong>Tonilson e Lisandro.</strong></p>
         </div>
         <div class="photos">
             <a href="image-gallary/galarry-nine.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-nine.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
