--- a/galarry.html
+++ b/galarry.html
@@ -52,7 +52,7 @@
             <p class="description">Retrato do jogo amistoso com uma vitória, o <strong>Coroa</strong> fazer pasagem de testemunho aos new school <strong>Tonilson e Lisandro.</strong></p>
         </div>
         <div class="photos">
-            <a href="image-gallary/galarry-nine.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-nine.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <a href="image-gallary/galarry-nine.png" target="_blank" rel="next"><img src="image-gallary/galarry-nine.png" alt="Photo-Galacticos" width="600" height="400"></a>
             <p>Retrato do sengundo jogo do campeonato <strong>Eu Amo Kapolo II</strong>, onde têm a técnica do <strong>Kiamesso</strong> e dribles do <strong>Djiby</strong> isso é família Galácticos.</p>
         </div>
         <div class="responsive">
