--- a/galarry.html
+++ b/galarry.html
@@ -53,7 +53,7 @@
         </div>
         <div class="photos">
             <a href="image-gallary/galarry-nine.png" target="_blank" rel="next"><img src="image-gallary/galarry-nine.png" alt="Photo-Galacticos" width="600" height="400"></a>
-            <p>Retrato do sengundo jogo do campeonato <strong>Eu Amo Kapolo II</strong>, onde têm a técnica do <strong>Kiamesso</strong> e dribles do <strong>Djiby</strong> isso é família Galácticos.</p>
+            <p class="description">Retrato do sengundo jogo do campeonato <strong>Eu Amo Kapolo II</strong>, onde têm a técnica do <strong>Kiamesso</strong> e dribles do <strong>Djiby</strong> isso é família Galácticos.</p>
         </div>
         <div class="responsive">
             <!--Colocar as imagens em table-->
