add a new style in my galarry

--- a/galarry.html
+++ b/galarry.html
@@ -36,7 +36,7 @@
         </div>
         <div class="photos">
             <a href="image-gallary/gallary-two.png" target="_blank" rel="next"><img src="image-gallary/gallary-two.png" alt="Photo-Galacticos" width="600" height="400"></a>
-            <p class="description">Retrato do jogo amistoso com uma vitória tudo pela estreia do equipamento, com the golden boys de ouro <strong>Diva, Da Fanta, Dos Branco, Jordão e o Chicha</strong> do dia 09.04.2023.</p>
+            <p class="description">Retrato do jogo amistoso com uma vitória tudo pela estreia do equipamento, com the golden boys de ouro <strong>Diva, Da Fanta, Dos Branco, Jordão e Chicha</strong> do dia 09.04.2023.</p>
         </div>
         <div class="photos">
             <a href="image-gallary/gallary-five.png" target="_blank" rel="next"><img src="image-gallary/gallary-five.png" alt="Photo-Galacticos" width="600" height="400"></a>
