--- a/members.html
+++ b/members.html
@@ -45,7 +45,7 @@
                         <td class="number">2</td>
                     </tr>
                     <tr>
-                        <td class="name">John Casch</td>
+                        <td class="name">John Cach</td>
                         <td class="number">0</td>
                     </tr>
                     <tr>
