--- a/galarry.html
+++ b/galarry.html
@@ -19,6 +19,50 @@
     <main>
        <section id="galarry">
         <div class="photos">
+            <a href="image-gallary/galarry-twenty-one.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-twenty-one.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p>Retrato com o <strong>Mata-Puta</strong>, Djiby, Safado e menino Da Fanta 03.09.2023</p>
+
+        </div>
+        <div class="photos">
+            <a href="" target="_blank" rel="next"><img src="image-gallary/galarry-twenty-six.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p>03.09.2023 dia da final; o <strong>Fc Galácticos</strong> para além do título conquistou todos prémios individuais: Melhor treinador, defesa, marcador e jogador é tudo nosso! Coach Coroa, Djiby e Ney.</p>
+
+        </div>
+        <div class="photos">
+            <a href="image-gallary/galary-eighteen.jpg" target="_blank" rel="next"><img src="image-gallary/galary-eighteen.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p>Capitão <strong>Ney</strong> que levou os seus colegas rumo a mas uma conquista, mereceu um prémio individual é tudo nosso!</p>
+
+        </div>
+        <div class="photos">
+            <a href="image-gallary/galarry-sixteen.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-sixteen.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p><strong>Cuidado!</strong> Não brinca estes são os <strong>fudidos</strong> do Capolo II, Mamesso, Cowboy, Seny, Safado, Jorra, e Djiby e dama Nelma também comemorou a conquista do título com a equipa.</p>
+
+        </div>
+        <div class="photos">
+            <a href="image-gallary/galarry-fifteen.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-fifteen.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p>Este elenco é de <strong>Cracks:</strong> Mamesso, Safado, Jorra, Seny<strong><q>Ti Penalti</q></strong> e Cowboy<strong><q>Lenda</q></strong> depois da batalha conquistada 03.09.2023.</p>
+
+        </div>
+        <div class="photos">
+            <a href="image-gallary/galarry-nineteen.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-nineteen.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p>O experiente Safado, Ney e Djiby comemorando o novo <strong>Troféu no dia 04.09.2023.</strong></p>
+
+        </div>
+        <div class="photos">
+            <a href="image-gallary/galarry-eleven.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-eleven.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p>Retrato do melhor jogador e marcador do campeonato <strong>EU AMO CAPOLO II</strong>, ou seja do melhor jogador do Capolo Djiby é tudo nosso. 03.09.2023</p>
+
+        </div>
+        <div class="photos">
+            <a href="image-gallary/galarry-ten.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-ten.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p>Este retrato é do dia <strong>03.09.2023</strong>, mas uma vez conquistamos a segunda taça consecutivamente; Piranha, Mata-Puta, Cowboy(Lenda), Djiby, Ney, Jorra e o Camavinga são os <strong>Campeões.</strong></p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/galarry-twenty-five.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-twenty-five.jpg" alt="Photo-Galacticos" width="
+                600" height="400"></a>
+            <p>Retrato do dia 04.09.2023 continuidade do festejo do novo <strong>Título</strong> conquistado.</p>
+        </div>
+        <div class="photos">
             <a href="image-gallary/gallary-one.png" target="blank" rel="next"><img src="image-gallary/gallary-one.png" alt="Photo-Galacticos" width="600" height="400"></a>
             <p class="description">Retrato da final do campeonato <strong>Gira Kapolo</strong> do dia 17.12.2022.</p>
         </div>
