--- a/galarry.html
+++ b/galarry.html
@@ -19,13 +19,23 @@
     <main>
        <section id="galarry">
         <div class="photos">
+            <a href="image-gallary/galarry-twenty-three.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-twenty-three.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p>Os adeptos também fizeram parte da grande conquista e comemoraram com os melhores do CapoloII <strong>03.09.2023</strong></p>
+
+        </div>
+        <div class="photos">
+            <a href="image-gallary/galarry-twenty.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-twenty.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p>Entrega do Troféu dos melhores do CapoloII, <strong>03.09.2023</strong> com Seny, Mane-G, Ney, Mata-Puta, Mamesso, Cowboy e o melhor balizeiro Piranha.</p>
+
+        </div>
+        <div class="photos">
             <a href="image-gallary/galarry-twenty-one.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-twenty-one.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
             <p>Retrato com o <strong>Mata-Puta</strong>, Djiby, Safado e menino Da Fanta 03.09.2023</p>
 
         </div>
         <div class="photos">
-            <a href="" target="_blank" rel="next"><img src="image-gallary/galarry-twenty-six.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
-            <p>03.09.2023 dia da final; o <strong>Fc Galácticos</strong> para além do título conquistou todos prémios individuais: Melhor treinador, defesa, marcador e jogador é tudo nosso! Coach Coroa, Djiby e Ney.</p>
+            <a href="image-gallary/galarry-twenty-six.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-twenty-six.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p>03.09.2023 dia da final; o <strong>Fc Galácticos</strong> para além do título conquistou todos prémios individuais: Melhor treinador, defesa, balizeiro, marcador e jogador é tudo nosso! Coach Coroa, Djiby e Ney.</p>
 
         </div>
         <div class="photos">
